<resources>
    <string name="app_name">Vetossimo.fr</string>
    <string name="copyright">Copyright :&#169; Vetossimo.fr, tous droits réservés</string>
    <string name="lorem">Sin autem ad adulescentiam perduxissent, dirimi tamen interdum contentione vel uxoriae condicionis vel commodi alicuius, quod idem adipisci uterque non posset. Quod si qui longius in amicitia provecti essent, tamen saepe labefactari, si in honoris contentionem incidissent; pestem enim nullam maiorem esse amicitiis quam in plerisque pecuniae cupiditatem, in optimis quibusque honoris certamen et gloriae; ex quo inimicitias maximas saepe inter amicissimos exstitisse.</string>
    <string name="lorem_2">Quis enim aut eum diligat quem metuat, aut eum a quo se metui putet? Coluntur tamen simulatione dumtaxat ad tempus. Quod si forte, ut fit plerumque, ceciderunt, tum intellegitur quam fuerint inopes amicorum. Quod Tarquinium dixisse ferunt, tum exsulantem se intellexisse quos fidos amicos habuisset, quos infidos, cum iam neutris gratiam referre posset.</string>
    <string name="solution_parfaite">Une solution parfaite pour vous !</string>
    <string name="création_compte">Créer un compte</string>
    <string name="connexion">Se connecter</string>
    <string name="veterinaire">Vous êtes vétérinaire ?</string>
    <string name="email">EMAIL</string>
    <string name="password">MOT DE PASSE</string>
    <string name="rester_connecte">Rester connecté</string>
    <string name="mdp_oublie">Mot de passe oublié ?</string>
    <string name="nouveau">Nouvel utilisateur</string>
    <string name="confirmation_mdp">CONFIRMATION MOT DE PASSE</string>
    <string name="confirmation_cgu">J\'accepte les conditions d\'utilisation de Vétossimo</string>
    <string name="infos_proprietaire">Mes informations de propriétaire</string>
    <string name="infos_proprietaire_animaux">Pour ajouter, modifier, supprimer un animal rendez-vous sur \"Mes animaux\"</string>
    <string name="monsieur">Monsieur</string>
    <string name="madame">Madame</string>
    <string name="modifier">Modifier</string>
    <string name="nom">NOM</string>
    <string name="prenom">PRENOM</string>
    <string name="adresse">ADRESSE</string>
    <string name="code_postal">CODE POSTAL</string>
    <string name="ville">VILLE</string>
    <string name="telephone">TELEPHONE</string>
    <string name="infos_animaux">Les informations de mes animaux</string>
    <string name="edit_animal">Modifier mon animal</string>
    <string name="date_naissance">DATE DE NAISSANCE</string>
    <string name="puce">Pucé/Tatoué</string>
    <string name="tatoue">Tatoué</string>
    <string name="numero_puce_tatouage">NUMÉRO D\'IDENTIFICATION</string>
    <string name="remarques">REMARQUES</string>
    <string name="rendez_vous_passes">Rendez-vous passés</string>
    <string name="prendre_rdv">Prendre RDV</string>
    <string name="aucun_rdv">Vous n\'avez aucun rendez vous pour le moment</string>
    <string name="choix_veto">Choisissez votre vétérinaire</string>
    <string name="sterilise">Stérilisé</string>
    <string name="nom_inconnu">Nom inconnu</string>
    <string name="adresse_inconnue">Adresse inconnue</string>
    <string name="tel_inconnu">Téléphone inconnu</string>
    <string name="a">A :</string>
    <string name="le">Le :</string>
    <string name="valider">Valider</string>
</resources>
