<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnexionActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connexion"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="117dp"
        tools:layout_editor_absoluteY="81dp" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="153dp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="216dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connexion"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="341dp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rester_connecte"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="275dp" />

    <Button
        android:id="@+id/btn_mdp_oublie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mdp_oublie"
        tools:layout_editor_absoluteX="114dp"
        tools:layout_editor_absoluteY="401dp" />

</android.support.constraint.ConstraintLayout>