<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:text="@string/connexion"
        android:layout_width="164dp"
        android:layout_height="42dp"
        android:id="@+id/btn_connexion"
        android:layout_marginTop="69dp"
        app:layout_constraintTop_toBottomOf="@+id/textView8" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="123dp" android:layout_marginStart="123dp"
        android:onClick="onClickConnexion"/>
    <Button
        android:text="@string/création_compte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_creation_compte" android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_connexion" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="130dp" android:layout_marginStart="130dp"
        android:onClick="onClickCreationCompte"/>
    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8" android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="172dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="119dp"
        android:layout_marginStart="119dp"/>
    <TextView
        android:text="@string/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="56dp"
        android:layout_marginStart="56dp"/>

</android.support.constraint.ConstraintLayout>