<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txt_nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/nom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_prenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="16dp"
        android:text="@string/prenom"
        app:layout_constraintStart_toEndOf="@+id/txt_nom"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/telephone"
        app:layout_constraintStart_toEndOf="@+id/txt_prenom"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_heureDeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="13dp"
        android:text="heureDebutTravail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nom" />

    <TextView
        android:id="@+id/txt_heureFin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="13dp"
        android:text="heureFinTravail"
        app:layout_constraintStart_toEndOf="@+id/txt_heureDeb"
        app:layout_constraintTop_toBottomOf="@+id/txt_tel" />

    <TextView
        android:id="@+id/txt_adresse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="14dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/txt_tel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_ville"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/txt_adresse"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>